Part_1-Simple_Serving_System/6-Scheduler_Stub/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-1
spec:
  type: NodePort
  ports:
    - name: http
      port: 8000
      targetPort: 8000
    - name: grpc
      port: 8001
      targetPort: 8001
    - name: metric
      port: 8002
      targetPort: 8002
  selector:
    app: server-1
